# mastodon_wikibot

./: .gitignore  LICENSE.md  Pipfile  README.md  install.py  pyproject.toml  requirements.txt  wikibot.py
systemd/: wikibot.service.template  wikibot.timer
