[project]
name = "mastodon-wikibot"
version = "0.2.0"
description = "A simple bot for mastodon, which posts the content of Wikipedia's 'on this day' feed during the day."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "mastodon-py>=2.1.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
]
